Home page UI + Notices Upload control

--- a/src/app/components/change-securityquestions/change-securityquestions.component.scss
+++ b/src/app/components/change-securityquestions/change-securityquestions.component.scss
@@ -67,7 +67,8 @@
   
           mat-icon {
             font-size: 1.2rem;
-            margin-right: 8px;
+            margin-right: 5px;
+            margin-left: 5px;
           }
   
           .edit-text {
