--- a/src/app/components/notices/notices.component.html
+++ b/src/app/components/notices/notices.component.html
@@ -22,6 +22,7 @@
       [paginationPageSize]="paginationPageSize"
       [paginationPageSizeSelector]="paginationPageSizeSelector"
       [domLayout]="'autoHeight'"
+      [rowClassRules]="rowClassRules"
       (rowDoubleClicked)="onRowDoubleClicked($event)"
     >
     </ag-grid-angular>
