--- a/src/app/components/notices/view-notice/view-notice.component.html
+++ b/src/app/components/notices/view-notice/view-notice.component.html
@@ -1,18 +1,20 @@
-<div class="dialog-header">
+<div class="dialog-container">
+  <div class="dialog-header">
     <h1 mat-dialog-title class="dialog-title">
-        <span class="label">Reference Number:</span>
-        <span class="value">{{ data.wReferenceNumber }}</span>
-        &nbsp;|&nbsp;
-        <span class="label">Notice Number:</span>
-        <span class="value">{{ data.wIssuersReferenceNumber }}</span>
-      </h1>
-          <button mat-icon-button class="close-button" (click)="onClose()">
+      <span class="label">Reference Number:</span>
+      <span class="value">{{ data.wReferenceNumber }}</span>
+      &nbsp;|&nbsp;
+      <span class="label">Notice Number:</span>
+      <span class="value">{{ data.wIssuersReferenceNumber }}</span>
+    </h1>
+    <button mat-icon-button class="close-button" (click)="onClose()">
       <span class="material-icons">close</span>
     </button>
   </div>
-  <mat-tab-group class="custom-tab-group" (selectedIndexChange)="onTabChange($event)">
-    <!-- Notice Details Tab -->
-    <mat-tab label="Notice Details">
+  <div class="dialog-body">
+    <mat-tab-group class="custom-tab-group" (selectedIndexChange)="onTabChange($event)">
+      <!-- Notice Details Tab -->
+      <mat-tab label="Notice Details">
         <div class="tab-content">
           <table class="notice-details-table">
             <tbody>
@@ -51,7 +53,7 @@
               <tr *ngIf="this.additionalAttachments.length > 0">
                 <td class="label">Additional Attachment(s) (if any):</td>
                 <td>
-                    <div *ngIf="!this.additionalAttachmentsLoaded">Loading...</div>
+                  <div *ngIf="!this.additionalAttachmentsLoaded">Loading...</div>
                   <ul *ngIf="this.additionalAttachmentsLoaded">
                     <li *ngFor="let attachment of additionalAttachments">
                       <a [href]="attachment.fileURI" target="_blank" rel="noopener noreferrer">
@@ -61,7 +63,7 @@
                   </ul>
                 </td>
               </tr>
-              
+
               <tr>
                 <td class="label">Link to Email Notification:</td>
                 <td><a href="javascript:void(0)" (click)="openHtmlViewer()">View Email Notification</a>
@@ -75,44 +77,72 @@
           </table>
         </div>
       </mat-tab>
-      
-  
-    <!-- Questionnaire Tab -->
-   <!-- Questionnaire Tab -->
-   <mat-tab *ngIf="this.responseRequired" label="Questionnaire">
-    <app-notice-questions 
-      [noticeQuestions]="noticeQuestions" 
-      [noticeQuestionsLoaded]="noticeQuestionsLoaded">
-    </app-notice-questions>
-  </mat-tab>
-  
-  
-  
-  <mat-tab *ngIf="this.responseRequired" label="Notes">
-    <div class="tab-content">
-      <div class="notes-container">
-        <p>{{ data.wNotes }}</p>
-        <p *ngIf="data.wNotes == '' || !data.wNotes">No notes added.</p>
-      </div>
-    </div>
-  </mat-tab>
-  
-  
-    <!-- Attachments Tab -->
-    <mat-tab *ngIf="this.responseRequired" label="Attachments">
-      <div class="tab-content">
-        <div *ngFor="let attachment of data.attachments">
-          <a href="#">{{ attachment }}</a>
+
+
+      <!-- Questionnaire Tab -->
+      <!-- Questionnaire Tab -->
+      <mat-tab *ngIf="this.responseRequired" label="{{ 'Questionnaire (' + (noticeQuestions.length)}})">
+        <app-notice-questions [noticeQuestions]="noticeQuestions" [noticeQuestionsLoaded]="noticeQuestionsLoaded"
+          [ReadOnly]="ReadOnly" (unsavedChange)="onNoticeQuestionsChange()">
+        </app-notice-questions>
+      </mat-tab>
+
+      <mat-tab *ngIf="this.responseRequired" label="Notes">
+        <div class="tab-content">
+          <div *ngIf="ReadOnly" class="notes-container">
+            <p>{{ data.wNotes }}</p>
+            <p *ngIf="data.wNotes == '' || !data.wNotes">No notes added.</p>
+          </div>
+          <textarea *ngIf="!ReadOnly" [(ngModel)]="data.wNotes" (ngModelChange)="onNotesChange()"></textarea>
         </div>
-      </div>
-    </mat-tab>
-  
-    <!-- Signature Tab -->
-    <mat-tab *ngIf="this.responseRequired" label="Signature">
-      <div class="tab-content">
-        <p><strong>Name of Individual:</strong> {{ this.signatoryName }}</p>
-        <p><strong>Date Signed:</strong> {{ this.dateSigned }}</p>
-      </div>
-    </mat-tab>
-  </mat-tab-group>
-  
+      </mat-tab>
+
+      <!-- Attachments Tab -->
+      <mat-tab *ngIf="this.responseRequired" label="Attachments">
+        <div class="tab-content">
+          <app-file-uploader [ShowHeaderPanel]="true" [ShowHeaderFormName]="false" [ObjectID]="123"
+            [ObjectInstanceID]="456" [ObjectInstanceRevNum]="1" [DocTypeID]="789" [FormTypeID]="101112"
+            [ShowPrimaryDoc]="true" (fileUploaded)="onFileUploaded($event)"></app-file-uploader>
+        </div>
+      </mat-tab>
+
+      <!-- Signature Tab -->
+      <mat-tab *ngIf="this.responseRequired" label="Signature">
+        <div class="tab-content">
+          <p><strong>Name of Individual:</strong> {{ this.signatoryName }}</p>
+          <p><strong>Date Signed:</strong> {{ this.dateSigned }}</p>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
+  <div class="modal-footer" *ngIf="!ReadOnly">
+    <button mat-icon-button class="animated-icon-button" (click)="navigateToTab(1)">
+      <mat-icon>help</mat-icon>
+      <span class="animated-text">Questionnaire</span>
+    </button>
+    <button mat-icon-button class="animated-icon-button-small" (click)="navigateToTab(2)">
+      <mat-icon>comment</mat-icon>
+      <span class="animated-text">Notes</span>
+    </button>
+    <button mat-icon-button class="animated-icon-button" (click)="navigateToTab(3)">
+      <mat-icon>attach_file</mat-icon>
+      <span class="animated-text">Attachments</span>
+    </button>
+    <button mat-icon-button class="animated-icon-button" (click)="navigateToTab(4)">
+      <mat-icon>draw</mat-icon>
+      <span class="animated-text">Signatories</span>
+    </button>
+    <button mat-icon-button class="animated-icon-button-small" (click)="onSave()">
+      <mat-icon>save</mat-icon>
+      <span class="animated-text">Save</span>
+    </button>
+    <button mat-icon-button class="animated-icon-button" (click)="onSaveAndClose()">
+      <mat-icon>folder_check</mat-icon>
+      <span class="animated-text">Save & Close</span>
+    </button>
+    <button mat-raised-button color="primary" class="btn" (click)="onSubmit()">
+      <mat-icon>send</mat-icon> Submit
+    </button>
+  </div>
+
+</div>
