--- a/src/app/components/notices/view-notice/view-notice.component.scss
+++ b/src/app/components/notices/view-notice/view-notice.component.scss
@@ -1,5 +1,9 @@
-
 .custom-tab-group {
+  position: sticky;
+  top: 0;
+  z-index: 2; // Adjust as needed to ensure it stays above content
+  background-color: white; // Match the modal's header background
+
   .mat-tab-label {
     font-weight: bold;
     color: #555555;
@@ -16,7 +20,7 @@
 
 .tab-content {
   padding: 20px;
-
+  height: 90%;
   p {
     margin: 10px 0;
     font-size: 1rem;
@@ -36,6 +40,10 @@
       color: #861624;
     }
   }
+}
+textarea {
+  width: 100%;
+  height: 400px;
 }
 
 .notice-details-table {
@@ -81,5 +89,121 @@
     &:first-child {
       margin-bottom: 10px;
     }
+  }
+}
+
+.modal-footer {
+  flex: 0 0 auto; /* Footer does not grow or shrink */
+  position: sticky;
+  bottom: 0;
+  z-index: 2;
+  background-color: #fff;
+  padding: 16px;
+  border-top: 1px solid #e0e0e0;
+  display: flex;
+  justify-content: center; /* Centers the button horizontally */
+  align-items: center;
+
+  .btn {
+    margin: 10px;
+    height: 46px;
+    display: flex;
+    align-items: center;
+    background-color: #a51e36;
+    color: white;
+    border-radius: 20px;
+    padding: 8px;
+    overflow: hidden;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: #861624;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    }
+  }
+}
+
+.dialog-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%; /* Ensure the modal takes full height */
+}
+
+
+.dialog-body {
+  flex: 1 1 auto; /* Body takes remaining space and allows scrolling if needed */
+  overflow-y: auto; /* Enable scrolling for large content */
+  padding: 20px;
+}
+
+.animated-icon-button {
+  float: left;
+  margin: 4px;
+  display: flex;
+  align-items: center;
+  background-color: #a51e36;
+  color: white;
+  border-radius: 20px;
+  padding: 8px;
+  overflow: hidden;
+  transition: width 0.3s ease;
+
+  &:hover {
+    width: 150px;
+    justify-content: flex-start;
+    padding: 8px 16px;
+  }
+
+  mat-icon {
+    font-size: 1.2rem;
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+
+  .animated-text {
+    display: none;
+    font-size: 0.9rem;
+    white-space: nowrap;
+  }
+
+  &:hover .animated-text {
+    display: inline-block;
+  }
+}
+
+.animated-icon-button-small {
+  margin: 4px;
+  display: flex;
+  align-items: center;
+  background-color: #a51e36;
+  color: white;
+  border-radius: 20px;
+  padding: 8px;
+  overflow: hidden;
+  transition: width 0.3s ease;
+
+  &:hover {
+    width: 100px;
+    justify-content: flex-start;
+    padding: 8px 16px;
+  }
+
+  mat-icon {
+    font-size: 1.2rem;
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+
+  .animated-text {
+    display: none;
+    font-size: 0.9rem;
+    white-space: nowrap;
+  }
+
+  &:hover .animated-text {
+    display: inline-block;
   }
 }
