--- a/src/app/components/submission-records/submission-records.component.html
+++ b/src/app/components/submission-records/submission-records.component.html
@@ -1,4 +1,4 @@
-<!-- <app-header></app-header> -->
+<app-header></app-header>
 <app-navbar [selectedPage]="'home'"></app-navbar>
 <div class="submission-records-container">
     <!-- Header -->
