Load pending sign off and general communication

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
   <!-- Top Notice Message -->
   <div class="notice-message" *ngIf="showNoticeMessage">
     <mat-icon class="blinking-icon">error_outline</mat-icon>
-    <span>{{ noticeMessage }}</span>
+    <span>{{ ESSAnnoucement }}</span>
     <button mat-icon-button (click)="closeNoticeMessage()">
       <mat-icon>close</mat-icon>
     </button>
@@ -20,7 +20,7 @@
           (click)="selectTable(i)">
           <mat-icon class="header-icon">{{ table.icon }}</mat-icon>
           {{ table.header }} 
-          <span *ngIf="i < 2" class="row-count">{{ table.data.length }}</span>
+          <span *ngIf="i < 2 && table.data.length > 0" class="row-count">{{ table.data.length }}</span>
           
         </span>
       </div>
@@ -29,7 +29,8 @@
           [columnDefs]="currentTable.columns" [defaultColDef]="defaultColDef" [theme]="theme" [modules]="modules"
           [pagination]="true" [paginationPageSize]="paginationPageSize"
           [paginationPageSizeSelector]="paginationPageSizeSelector" [domLayout]="'autoHeight'"
-          (cellClicked)="onCellClicked($event)">
+          (cellClicked)="onCellClicked($event)"
+          (rowDoubleClicked)="onRowDoubleClicked($event)">
         </ag-grid-angular>
       </div>
     </div>
