--- a/src/app/components/submission-records/submission-records.component.html
+++ b/src/app/components/submission-records/submission-records.component.html
@@ -1,54 +1,66 @@
 <app-header></app-header>
 <app-navbar [selectedPage]="'home'"></app-navbar>
 <div class="submission-records-container">
-    <!-- Header -->
-    <div class="header">
-      <h2>Submission Records</h2>
-      <p>Following applications are submitted to GFICA</p>
-      <small>Please click on the application to view details</small>
-    </div>
-  
-    <!-- Tabs -->
-    <mat-tab-group>
-      <mat-tab label="Submitted">
-        <!-- Table for Submitted Records -->
-        <div class="table-container">
-          <table mat-table [dataSource]="dataSource" matSort>
-  
-            <!-- Column: Application -->
-            <ng-container matColumnDef="application">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Application</th>
-              <td mat-cell *matCellDef="let record">{{ record.application }}</td>
-            </ng-container>
-  
-            <!-- Column: Date -->
-            <ng-container matColumnDef="date">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-              <td mat-cell *matCellDef="let record">{{ record.date | date }}</td>
-            </ng-container>
-  
-            <!-- Column: View -->
-            <ng-container matColumnDef="view">
-              <th mat-header-cell *matHeaderCellDef>Action</th>
-              <td mat-cell *matCellDef="let record">
-                <button mat-button color="primary">View</button>
-              </td>
-            </ng-container>
-  
-            <!-- Table Header -->
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <!-- Table Rows -->
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-  
-          <!-- Paginator -->
-          <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 20]">
-          </mat-paginator>
-        </div>
-      </mat-tab>
-      <mat-tab label="Pending">
-        <p>No pending submissions</p>
-      </mat-tab>
-    </mat-tab-group>
-  </div>
-  
+  <h2>Submission Records</h2>
+
+
+  <mat-tab-group>
+    <!-- Submitted Applications Tab -->
+    <mat-tab label="Submitted">
+      <div class="table-container">
+        <table mat-table [dataSource]="dataSource" matSort>
+          <!-- Column: Application -->
+          <ng-container matColumnDef="application">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+              Application
+            </th>
+            <td mat-cell *matCellDef="let element">{{ element.formType }}</td>
+          </ng-container>
+
+          <!-- Column: Submitted Date -->
+          <ng-container matColumnDef="submittedDate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+              Submitted Date
+            </th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.submittedDate | date }}
+            </td>
+          </ng-container>
+
+          <!-- Column: Status -->
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.applicationStatus }}
+            </td>
+          </ng-container>
+
+          <!-- Column: Actions -->
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
+              <button
+                mat-button
+                color="primary"
+                (click)="viewApplication(element)"
+              >
+                View
+              </button>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+        <mat-paginator
+          [pageSizeOptions]="[5, 10, 20]"
+          showFirstLastButtons
+        ></mat-paginator>
+      </div>
+    </mat-tab>
+    <!-- Pending Tab -->
+    <mat-tab label="Pending">
+      <p>No pending submissions.</p>
+    </mat-tab>
+  </mat-tab-group>
+</div>
