--- a/src/app/components/submission-records/submission-records.component.html
+++ b/src/app/components/submission-records/submission-records.component.html
@@ -2,65 +2,50 @@
 <app-navbar [selectedPage]="'home'"></app-navbar>
 <div class="submission-records-container">
   <h2>Submission Records</h2>
+  <p>Following applications are submitted to GFICA</p>
+  <small>Please click on the application to view details</small>
 
-
-  <mat-tab-group>
-    <!-- Submitted Applications Tab -->
-    <mat-tab label="Submitted">
-      <div class="table-container">
-        <table mat-table [dataSource]="dataSource" matSort>
-          <!-- Column: Application -->
-          <ng-container matColumnDef="application">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-              Application
-            </th>
-            <td mat-cell *matCellDef="let element">{{ element.formType }}</td>
-          </ng-container>
-
-          <!-- Column: Submitted Date -->
-          <ng-container matColumnDef="submittedDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-              Submitted Date
-            </th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.submittedDate | date }}
-            </td>
-          </ng-container>
-
-          <!-- Column: Status -->
-          <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Status</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.applicationStatus }}
-            </td>
-          </ng-container>
-
-          <!-- Column: Actions -->
-          <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef>Actions</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-button
-                color="primary"
-                (click)="viewApplication(element)"
-              >
-                View
-              </button>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-        <mat-paginator
-          [pageSizeOptions]="[5, 10, 20]"
-          showFirstLastButtons
-        ></mat-paginator>
-      </div>
-    </mat-tab>
-    <!-- Pending Tab -->
-    <mat-tab label="Pending">
-      <p>No pending submissions.</p>
-    </mat-tab>
-  </mat-tab-group>
+  <div class="submission-records" data-ag-theme-mode="light-red">
+    <mat-tab-group class="custom-tab-group" [backgroundColor]="">
+      <!-- Submitted -->
+      <mat-tab label="Submitted">
+        <!-- Table Section -->
+        <div class="table-content">
+          <ag-grid-angular
+            class="ag-theme-alpine custom-ag-grid"
+            [theme]="theme"
+            [modules]="modules"
+            [defaultColDef]="defaultColDef"
+            [columnDefs]="SubmittedColDef"
+            [rowData]="Submitted"
+            (cellClicked)="onCellClicked($event)"
+            [pagination]="true"
+            [paginationPageSize]="paginationPageSize"
+            [paginationPageSizeSelector]="paginationPageSizeSelector"
+            [domLayout]="'autoHeight'"
+          >
+          </ag-grid-angular>
+        </div>
+      </mat-tab>
+      <!-- Submitted -->
+      <mat-tab label="Pending">
+        <div class="table-content">
+          <ag-grid-angular
+            class="ag-theme-alpine custom-ag-grid"
+            [theme]="theme"
+            [modules]="modules"
+            [defaultColDef]="defaultColDef"
+            [columnDefs]="PendingColDef"
+            [rowData]="Pending"
+            (cellClicked)="onCellClicked($event)"
+            [pagination]="true"
+            [paginationPageSize]="paginationPageSize"
+            [paginationPageSizeSelector]="paginationPageSizeSelector"
+            [domLayout]="'autoHeight'"
+          >
+          </ag-grid-angular>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
 </div>
