--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,12 +16,13 @@
     <!-- Left Panel -->
     <div class="left-panel">
       <div class="headers">
-        <span  *ngFor="let table of tables; let i = index" [class.active]="currentTableIndex === i"
-          (click)="selectTable(i)">
+        <span *ngFor="let table of filteredTables; let i = index"
+        [class.active]="currentTableIndex === i"
+          (click)="selectTable(i)"
+          >
           <mat-icon class="header-icon">{{ table.icon }}</mat-icon>
           {{ table.header }} 
           <span *ngIf="i < 2 && table.data.length > 0" class="row-count">{{ table.data.length }}</span>
-          
         </span>
       </div>
       <div class="table-container" data-ag-theme-mode="light-red">
