Submission records small design changes

--- a/src/app/components/submission-records/submission-records.component.html
+++ b/src/app/components/submission-records/submission-records.component.html
@@ -3,7 +3,7 @@
 <div class="submission-records-container">
   <h2>Submission Records</h2>
   <p>Following applications are submitted to GFICA</p>
-  <small>Please click on the application to view details</small>
+  <!-- <small>Please click on the application to view details</small> -->
 
   <div class="submission-records" data-ag-theme-mode="light-red">
     <mat-tab-group class="custom-tab-group" [backgroundColor]="">
