Hot fixes on Home page and submission records

--- a/src/app/components/submission-records/submission-records.component.html
+++ b/src/app/components/submission-records/submission-records.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-navbar [selectedPage]="'home'"></app-navbar>
+<app-navbar [selectedPage]="'none'"></app-navbar>
 <div class="submission-records-container">
   <h2>Submission Records</h2>
   <p>Following applications are submitted to GFICA</p>
