--- a/src/app/components/home/shared/navbar/navbar.component.scss
+++ b/src/app/components/home/shared/navbar/navbar.component.scss
@@ -57,16 +57,22 @@
   z-index: 10;
   display: flex;
   flex-direction: column;
+  border-bottom: 3px solid transparent; /* Default transparent border */
+  border-radius: 10px; /* Rounded corners on hover */
 }
 
 .dropdown-menu button {
   padding: 10px;
   width: 200px;
   text-align: left;
+  border-bottom: 3px solid transparent; /* Default transparent border */
+  border-radius: 10px; /* Rounded corners on hover */
 }
 
 .dropdown-menu button:hover {
   background-color: #f0f0f0;
+  border-bottom: 3px solid transparent; /* Default transparent border */
+  border-radius: 10px; /* Rounded corners on hover */
 }
 
 button.active {
@@ -75,6 +81,8 @@ button.active {
 }
 .dropdown-menu button {
   color: #a51e36; /* Maroon text always visible */
+  border-bottom: 3px solid transparent; /* Default transparent border */
+  border-radius: 10px; /* Rounded corners on hover */
 
   &:hover {
     background-color: #f0f0f0; /* Light gray background on hover */
