submission records new layout with dummy data

--- a/src/app/components/submission-records/submission-records.component.html
+++ b/src/app/components/submission-records/submission-records.component.html
@@ -23,6 +23,7 @@
             [paginationPageSize]="paginationPageSize"
             [paginationPageSizeSelector]="paginationPageSizeSelector"
             [domLayout]="'autoHeight'"
+            [getRowHeight]="getRowHeight"
           >
           </ag-grid-angular>
         </div>
@@ -42,6 +43,7 @@
             [paginationPageSize]="paginationPageSize"
             [paginationPageSizeSelector]="paginationPageSizeSelector"
             [domLayout]="'autoHeight'"
+            [getRowHeight]="getRowHeight"
           >
           </ag-grid-angular>
         </div>
